# caffe-libs

./: .gitignore  build.sh  config.sh
boost/: CMakeLists.txt
scripts/: build_boost.sh  build_caffe.sh  build_gflags.sh  build_glog.sh  build_leveldb.sh  build_lmdb.sh  build_openblas.sh  build_opencv.sh  build_protobuf.sh  build_snappy.sh
